lamp-wp-ec2/sg.tf
# Create Web Security Group
resource "aws_security_group" "lamp-sg" {
    name        = "Lamp security group"
    description = "Allow ssh inbound traffic"
    vpc_id      = aws_vpc.lamp-vpc.id
  
    ingress {
      description = "ssh from VPC"
      from_port   = 22
      to_port     = 22
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
    
    ingress {
    description = "http port"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    }
    
    egress {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
    }
  
    tags = {
      Name = "Lamp-SG"
    }
}
